[tool.poetry]
name = "rate-control"
version = "1.0.0.dev1"
description = "Versatile rate controlling in Python"
authors = ["Corentin Régent <corentin.regent.pro@gmail.com>"]

license = "MIT"
repository = "https://github.com/corentin-regent/rate-control"
readme = "README.rst"
packages = [{include = "rate_control"}]

keywords = [
    "async",
    "rate limiter",
    "rate control",
    "scheduler",
    "throttling",
    "token bucket",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.8"
anyio = "^4"
typing_extensions = {version = "^4.4", python = "<3.12"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.6"
pre-commit = "^3"
ruff = "^0.2"

[tool.poetry.group.test.dependencies]
aiofastforward = "^0.0.26"
pytest = "^8"
pytest-subtests = "^0.11"

[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies.coverage]
version = "^7"
extras = ["toml"]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
enum_tools = {version = "^0.11", extras=["sphinx"]}
furo = "==2024.01.29"
sphinx = "^7"
sphinx-autodoc-typehints = "^1.21.2"


[tool.coverage.run]
branch = true

[tool.mypy]
strict = true
enable_error_code = "explicit-override"
ignore_missing_imports = true

[tool.ruff]
exclude = ["docs/examples"]
fix = true
line-length = 120
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
line-ending = "lf"
quote-style = "single"

[tool.ruff.lint]
dummy-variable-rgx = "^_+$"
extend-select = ["I"]  # isort

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
